# how-to-fetch-a-web-api-with-rust

./: README.md
stock-cli/: Cargo.toml
stock-cli/src/: main.rs
